@@ -112,8 +112,9 @@ SUBROUTINE GRID_METRICS
   CALL SETUP_OBC
 # if defined (SEMI_IMPLICIT)
   IF(NESTING_ON) THEN
+    ISONB_3 = ISONB
     DO I=1,IOBCN
-      ISONB(NEXT_OBC(I)) = 3
+      ISONB_3(NEXT_OBC(I)) = 3
     END DO
   ENDIF
 # endif
