@@ -1266,6 +1266,7 @@ MODULE ALL_VARS
    INTEGER, ALLOCATABLE,TARGET :: NTSN(:)             !! NUMBER OF NODES SURROUNDING EACH NODE
    INTEGER, ALLOCATABLE,TARGET :: ISONB(:)            !!NODE MARKER = 0,1,2
    INTEGER, ALLOCATABLE,TARGET :: ISONB_W(:)          !!NODE MARKER = 0,1,2
+   INTEGER, ALLOCATABLE,TARGET :: ISONB_3(:)          !!NODE MARKER = 0,3   
    INTEGER, ALLOCATABLE,TARGET :: ISBC(:)     
    INTEGER, ALLOCATABLE,TARGET :: ISBCE(:)     
    INTEGER, ALLOCATABLE,TARGET :: IEC(:,:)
@@ -1911,6 +1912,7 @@ CONTAINS
    ALLOCATE(NTSN(0:MT))          ;NTSN     = 0 
    ALLOCATE(ISONB(0:MT))         ;ISONB    = 0  !!NODE MARKER = 0,1,2
    ALLOCATE(ISONB_W(0:MT))       ;ISONB_W  = 0  !!NODE MARKER = 0,1,2
+   ALLOCATE(ISONB_3(0:MT))       ;ISONB_3  = 0  !!NODE MARKER = 0,3
    ALLOCATE(ISBCE(0:NT))         ;ISBCE    = 0 
    ALLOCATE(NIEC(NCT,2))         ;NIEC     = 0
    ALLOCATE(NTRG(NCT))           ;NTRG     = 0
