@@ -84,3 +84,6 @@ bcond_gcn.F, vdif_ts.F, mod_heatflux_sediment.F
 
 Add mod_vector_projection
 internal_step.F,  fvcom.F,  mod_main.F,  mod_ncdio.F,  mod_vector_projection.F, makefile
+
+add isonb3
+grid_metrics.F,  mod_main.F,  mod_semi_implicit.F
